--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "demo-dapp-react-ui",
+  "homepage": "https://macomni.github.io/demo-dapp-with-react-ui/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite --host --force",
     "build": "tsc && GH_PAGES=true VITE_GH_PAGES=true vite build",
     "build:dev": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ton-community/assets-sdk": "^0.0.4",
@@ -30,6 +33,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^6.1.1",
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
